creating tag and sample data

--- a/calls/US-2-aydr/home.tex
+++ b/calls/US-2-aydr/home.tex
@@ -39,7 +39,7 @@ La tesis del candidato y su actuación como alumno de master ha sido reconocida 
 \subsection{Hoja de Servicio}
 
 \subsubsection{Hoja de Servicio Université de Rennes 1 e INSA}
-\insertpage{1}{documentos/docencia/docencia_impartida/contratoInriaRaw.pdf}
+%\insertpage{1}{documentos/docencia/docencia_impartida/contratoInriaRaw.pdf}
 
 \subsubsection{Hoja de Servicio Sevilla}
 \startitems
@@ -139,7 +139,7 @@ El candidato ha desarrollado gran parte de su carrera investigadora en centros i
 
 \subsection{Ponencias}
 \label{ponencias}
-\insertpage{1}{./documentos/otros/DeclaracionJurada.pdf}
+%\insertpage{1}{./documentos/otros/DeclaracionJurada.pdf}
 \newpage
 
 \subsection{CONGRESOS Y CONFERENCIAS CIENTIFICAS}
@@ -154,7 +154,7 @@ A parte de las contribuciones realizadas en revistas de impacto y conferencias m
 
 El solicitante ha participado en el comité de organización de los siguientes eventos. A continuación se incluye la documentación justificativa.
 \subsubsection{SPLC - 2015}. The 19th International Software Product Line Conference: New Directions in Systems and Software Product Line Engineering.
-\insertpage{1}{./documentos/investigacion/revisiones/splc15.pdf}
+%\insertpage{1}{./documentos/investigacion/revisiones/splc15.pdf}
 
 \subsection{AÑOS COMO BECARIO FPI O SIMILAR}
 El candidato ha disfrutado de la siguiente financiación durante su periodo predoctoral y postdoctoral\\
@@ -209,9 +209,9 @@ Asimismo, el candidato ha formado parte del comité de organización de las sigu
 \subsection{Becas de postgrado}
 \label{competitivo}
 Contrato competitivo postdoctoral. Sección \ref{sec:cyberdefense}
-\insertpage{1}{./documentos/investigacion/postdoc/postdoc_competitivo.pdf}
+%\insertpage{1}{./documentos/investigacion/postdoc/postdoc_competitivo.pdf}
 %\printOthers{Postdoc} 
-
+ 
 \subsection{Conocimiento de idiomas relevantes para la investigación}
 \startitems
 \printOthers{Idiomas} 
