--- a/main.tex
+++ b/main.tex
@@ -11,18 +11,18 @@
 %---------------------------FRONTPAGE-------------------------
 %-------------------------------------------------------------
  
-\author{José Ángel Galindo Duarte}{}{}{}
-\setTitle{Documentación Acreditativa de los Méritos \\ Aportados para el Concurso \\ a Ayudante Doctor}
+\author{Yo}{}{}{}
+\setTitle{Documentación Acreditativa de los Méritos }
 \setSubtitle{Area de lenguajes y sistemas informáticos}
-\setUniversity{Universidad de Sevilla}
-\setLink{https://hdvirtual.us.es/discovirt/index.php/s/qCQ1XPA7DGkfCiI}
+\setUniversity{Universidad de }
+\setLink{http://lalala}
 \makeTitlePage
 \cleardoublepage
  
 \pagenumbering{arabic}
 \pagestyle{indexstyle}
 
-% TOC 
+% TOC  
 \tableofcontents \cleardoublepage	
  
 \pagestyle{meritosstyle}
